feat: add universal param search
